refactor(app): code cleanup
